Prevent failing DCHECK for invalid favicon url

When adding a content setting like "http://[*.]example.com", we try to
fetch a synced favicon for it, which fails with a DCHECK because
GURL::spec thinks this is an invalid url. This will wouldn't succeed for
invalid URLs anyway, so favicon_source is changed to skip fetching a
synced favicon.

Bug: 799906
Change-Id: Idb77abf5e4747bd4415b9e0a4ae156b9a3db93c7